--- a/SysPool/Views/Bookings.xaml
+++ b/SysPool/Views/Bookings.xaml
@@ -26,7 +26,16 @@
                 HorizontalOptions="CenterAndExpand"
                 x:Name="Loader"/>
 
-            <CollectionView ItemsSource="{Binding}">
+                        <Label
+                Text="Aún no hay reservas." 
+                TextColor="Black"
+                FontSize="16"
+                            IsVisible="False"
+            HorizontalOptions="Center"
+                FontFamily="Raleway Regular"
+                Margin="0, 300, 0, 0" x:Name="noBookings"/>
+
+            <CollectionView ItemsSource="{Binding BookingsCollection}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <VerticalStackLayout Padding="10">
@@ -36,6 +45,7 @@
                 BorderColor="Transparent"
                 HasShadow="True"
                 CornerRadius="15"
+                                WidthRequest="360"
                                 MaximumHeightRequest="150"
                             Padding="0">
 
@@ -46,7 +56,7 @@
                                 <VerticalStackLayout>
                                     <HorizontalStackLayout Padding="0" VerticalOptions="CenterAndExpand">
                                         <Image Source="{Binding ImagenMesa}" HeightRequest="150" WidthRequest="180" Aspect="AspectFill" Margin="0, 0, 15, 0"/>
-                                        <VerticalStackLayout VerticalOptions="CenterAndExpand">
+                                        <VerticalStackLayout VerticalOptions="CenterAndExpand" Spacing="3">
                                             <Label
                             Text="{Binding TipoMesa, StringFormat='Mesa de {0}'}"
                             TextColor="Black"
@@ -68,18 +78,20 @@
                                                 FontSize="14"
                                                 FontFamily="Raleway Medium"/>
 
-                                            <HorizontalStackLayout 
-                                                HorizontalOptions="CenterAndExpand" 
-                                                Spacing="10" Margin="0, 10, 5, 0">
                                                 <Button 
-                                                    Text="Iniciar"
-                                                    BackgroundColor="#208D2B"
-                                                    FontFamily="Raleway Bold"/>
-                                                <Button 
+                                                    Margin="0, 3, 10, 5"
                                                     Text="Cancelar"
-                                                    BackgroundColor="#DB3535"
-                                                    FontFamily="Raleway Bold"/>
-                                            </HorizontalStackLayout>
+                                                    WidthRequest="150"
+                                                    BorderColor="#DB3535"
+                                                    BorderWidth="1"
+                                                    HeightRequest="30"
+                                                    Padding="0"
+                                                    TextColor="#DB3535"
+                                                    BackgroundColor="Transparent"
+                                                    FontFamily="Raleway Medium"
+                                                    Clicked="CancelBooking"
+                                                    IsVisible="{Binding CancelButtonVisibility}"
+                                                    CommandParameter="{Binding .}"/>
                                         </VerticalStackLayout>
                                     </HorizontalStackLayout>
                                 </VerticalStackLayout>
