--- a/SysPool/Views/TableView.xaml
+++ b/SysPool/Views/TableView.xaml
@@ -64,7 +64,8 @@ Margin="10, 0, 10, 0"/>
                     </VerticalStackLayout>
                 </VerticalStackLayout>
 
-                <VerticalStackLayout>
+                <VerticalStackLayout Spacing="10">
+                    <Label Text="Reservas existentes" HorizontalOptions="Center" FontSize="23" FontFamily="Raleway Medium" HorizontalTextAlignment="Center"/>
                     <cal:Calendar 
                         Events="{Binding Events}"
                         EventsScrollViewVisible="True" 
@@ -72,7 +73,7 @@ Margin="10, 0, 10, 0"/>
                         WidthRequest="350" 
                         ArrowsBackgroundColor="Black" 
                         ShowYearPicker="False" 
-                        SelectedDateColor="#208D2B" 
+                        SelectedDateColor="#F0F0F0" 
                         SelectedDayBackgroundColor="#208D2B" 
                         TodayOutlineColor="#208D2B" 
                         ArrowsBorderWidth="0" 
@@ -89,13 +90,15 @@ Margin="10, 0, 10, 0"/>
 
                         <cal:Calendar.EventTemplate>
                             <DataTemplate>
-                                <HorizontalStackLayout HorizontalOptions="Center" Margin="0, 10" Spacing="10">
-                                    <Label Text="{Binding Name}" FontSize="24" FontAttributes="Bold" FontFamily="Raleway Bold" HorizontalTextAlignment="Center"/>
-                                    <Label 
-                                        FontFamily="Raleway Regular"
-                                        Text="{Binding Date}" VerticalOptions="Center" VerticalTextAlignment="Center" FontSize="20"
-                                           HorizontalOptions="Center"/>
-                                </HorizontalStackLayout>
+                                <VerticalStackLayout Margin="0, -10, 0, 0">
+                                    <HorizontalStackLayout HorizontalOptions="Center" Margin="0, 10" Spacing="0">
+                                        <Label Text="{Binding Name}" FontSize="20" FontFamily="Raleway Medium" HorizontalTextAlignment="Center"/>
+                                        <Label 
+            FontFamily="Raleway Regular"
+            Text="{Binding Hour, StringFormat='{0} p.m'}" VerticalOptions="Center" VerticalTextAlignment="Center" FontSize="20"
+               HorizontalOptions="Center"/>
+                                    </HorizontalStackLayout>
+                                </VerticalStackLayout>
                             </DataTemplate>
                         </cal:Calendar.EventTemplate>
                     </cal:Calendar>
